--- a/src/pages/HomePage/style.module.css
+++ b/src/pages/HomePage/style.module.css
@@ -3,18 +3,51 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
-    border: solid 1px var(--text-color);
 }
 
 .main_page{
     width: 80%;
     margin: 1%;
-    border: solid 1px var(--text-color);
-
+    overflow-y: scroll;
+    scrollbar-color: var(--bg-secondary-color)
+}
+::-webkit-scrollbar{
+    display: none;
 }
 
 .nav_bar{
     width:20%;
-    border: solid 1px var(--text-color);
     background-color: var(--bg-secondary-color);
+}
+
+.addToPlaylistPopup{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(23, 23, 23,0.7);
+}
+
+.showPlaylists{
+    width: 20%;
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    overflow-y: scroll;
+    border: 5px solid var(--bg-color) ;
+    background: var(--bg-color);
+}
+
+.playlistsList{
+    font-size: var(--font-size-text);
+    color: var(--text-secondary-color);
+    background-color: var(--bg-color);
+    border: none;
+    padding: 1%;
 }
