--- a/src/global.css
+++ b/src/global.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    font-size: 20px;
+    font-size: var(--font-size-text);
     font-family: 'Poppins', sans-serif;
     color: var(--text-color);
     width: 100%;
@@ -26,6 +26,6 @@ body{
     --primary-color: #56C493;
     --input-color: #383838;
     --font-size-label: 13px;
-    --font-size-text: 11px
+    --font-size-text: 25px;
     --border-radius: 4px;
 }
