--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -20,3 +20,19 @@
     border:solid 1px var( --text-secondary-color);
     border-radius: 4px;
 }
+
+.avatar{
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+}
+.logo >span{
+  color: var(--primary-color);
+}
+
+.upload{
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    position: absolute;
+}
