--- a/src/components/ControlSong/style.module.css
+++ b/src/components/ControlSong/style.module.css
@@ -4,6 +4,8 @@
     flex-direction: row;
     align-content: center;
     justify-content: space-around;
+    color: var(--primary-color);
+
 }
 
 .TbPlayerSkipBack:hover{
