--- a/src/components/NavBar/style.module.css
+++ b/src/components/NavBar/style.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border-top: 1px solid var(--primary-color);
 }
 
 .btn_nav_bar{
