--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -1,6 +1,7 @@
 .main_header{
     width: 100%;
-    padding: 1.5% 1% 1.5% 1%;
+    height: 75px;
+    padding: 20px 1% 20px 1%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -49,3 +50,25 @@
     height: 0;
     position: absolute;
 }
+
+@media only screen and (max-width: 600px) {
+    .main_header{
+        width: 100%;
+        height: 50px;
+        padding: 20px 1% 20px 1%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-content: center;
+    }
+
+    .search_input{
+        margin-top: 60px;
+        height: 40px;
+        width: 50% ;
+    }
+    .search_logo{
+        margin-top: 60px;
+    }
+}
+  
