--- a/src/components/Login/style.module.css
+++ b/src/components/Login/style.module.css
@@ -48,3 +48,19 @@
 .login_button:hover{
     transform: scale(1.3);
 }
+
+@media only screen and (max-width: 600px) {
+    .formLogin{
+        height: 40%;
+        width: 50%;
+        padding:3% 2% 3% 2%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: var( --primary-color);
+        box-shadow: 2px 5px 8px 10px rgba(0, 0, 0, 0.484);
+        border-radius: 10%;
+    }
+       
+}
