--- a/src/components/Register/style.module.css
+++ b/src/components/Register/style.module.css
@@ -59,3 +59,19 @@
 .radio{
     font-size: var(--font-size-label);
 }
+
+@media only screen and (max-width: 600px) {
+    .formLogin{
+        height: 45%;
+        width: 65%;
+        padding:3% 2% 3% 2%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: var( --primary-color);
+        box-shadow: 2px 5px 8px 10px rgba(0, 0, 0, 0.484);
+        border-radius: 10%;
+    }
+       
+}
