--- a/src/components/SongCard/style.module.css
+++ b/src/components/SongCard/style.module.css
@@ -51,3 +51,14 @@
 .favoriteImage:hover {
     transform: scale(1.3);
 }
+
+@media only screen and (max-width: 600px){
+  .song_card {
+    width: 40%;
+    height: 120px;
+  }
+  .add_like {
+    padding: 1%;
+    width: 50%;
+  }
+}
